@@ -2,6 +2,7 @@
   1. New prayers: empower unholy weapon, morph unholy weapon, faithful hellhound, discipline
   2. New prayers: remove inhibitions
   3. Prop_OpenCommand and Prop_CloseCommand have expanded arguments.
+  4. Room-based Gathering skills now decrease yield with repeated spams of the same room.
 
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
